--- a/ios-developer.html
+++ b/ios-developer.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://social.icims.com/job/Principal-iOS-Developer-Job-Waltham-MA-02453-US-24231137.html?isd_source=twitter&isd_pub=130877&pubId=147'>Principal iOS Developer | iCIMS Social Distribution</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://social.icims.com/job/Principal-iOS-Developer-Job-Waltham-MA-02453-US-24231137.html?isd_source=twitter&isd_pub=130877&pubId=147'>Principal iOS Developer | iCIMS Social Distribution</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -177,7 +177,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<h5><a href='https://syone2.recruitee.com/o/ref-6682019-ios-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-6682019-ios-developer'>
       (Ref. 668/2019)  iOS Developer - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -213,7 +213,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
-<h5><a href='https://verisure.avature.net/careers/SendToAFriend?jobId=141'>Send to a friend - iOS Developer - Careers Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verisure.avature.net/careers/SendToAFriend?jobId=141'>Send to a friend - iOS Developer - Careers Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -249,7 +249,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914841'>Job Application for iOS Developer(eCommerce Platform)  at Algorythma</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914841'>Job Application for iOS Developer(eCommerce Platform)  at Algorythma</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -365,7 +365,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://touchbistro.applytojob.com/apply/n3VFW0a5io/Senior-IOS-Developer'>Senior iOS Developer - TouchBistro - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://touchbistro.applytojob.com/apply/n3VFW0a5io/Senior-IOS-Developer'>Senior iOS Developer - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Senior iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
@@ -394,7 +394,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ftja6w5a6n1mwj5xshkuhdyshw'>iOS Developer  | Opportunity Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ftja6w5a6n1mwj5xshkuhdyshw'>iOS Developer  | Opportunity Portal</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -429,7 +429,7 @@ automotive?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/046D8E238F'>Prototype Interactive - Jobs: iOS Lead Developer - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/046D8E238F'>Prototype Interactive - Jobs: iOS Lead Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 23, 2019 ... Apply online for the job of iOS Lead Developer at Prototype Interactive.</p>
 <hr/>
@@ -455,7 +455,7 @@ automotive?...</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MobileProgrammingLLC/743999696681449-android-ios-developer'>Mobile Programming LLC Android/iOS developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MobileProgrammingLLC/743999696681449-android-ios-developer'>Mobile Programming LLC Android/iOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -463,7 +463,7 @@ automotive?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
